# mcp-surfaceprint

./: PRINCIPLES.md  README.md  You can’t prove an MCP server hasn’t changed.md  mcp_preflight.py  mcp_surfaceprint.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
docs/: server-manifest.md  snapshots.md
tests/: conftest.py  show_outputs.py  test_canonicalization_contract.py  test_capabilities.py  test_classify_and_signals.py  test_cli_behavior.py  test_diff_reports.py  test_flags_coverage.py  test_integration_toy_servers.py  test_output_formatting.py  test_snapshot_digest.py  test_stderr_notes_and_timeouts.py
tests/baselines/: toy-open.snapshot.json
tests/fixtures/conformance/canonical/: basic_surface.json
tests/fixtures/conformance/changes/: manifest_description_changed.json  manifest_operation_added.json  prompt_argument_required_changed.json  resource_description_changed.json  tool_schema_enum_expanded.json
tests/fixtures/conformance/equivalence/: reordered_manifest_ops_and_prompt_args.json
tests/toy_servers/: toy_auth_crash.py  toy_auth_gated.py  toy_cwd_aware.py  toy_env_aware.py  toy_home_aware.py  toy_manifest_dupe_ops.py  toy_open.py  toy_partial_prompts.py  toy_partial_resources.py  toy_stderr_chatty.py  toy_tools_only.py
